--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div id="app"></div>
     <script
       type="module"
-      src="/src/main.ts" /></script>
+      src="/src/main.ts"></script>
   </body>
 </html>
